# crtm-ai

./: CMakeLists.txt  LICENSE  README.md
cmake/Modules/: SetFortranFlags.cmake
src/: CMakeLists.txt  NN_ActivationFunctions.f90  NN_CostFunction.f90  NN_Layer_Define.f90  NN_TensorFlow_IO.f90  NN_TrainingData.f90  NN_netCDF_IO.f90  NeuralNet_Define.f90
test/: CMakeLists.txt  main.f90  test_Backprop.f90  test_NetConstructor.f90  test_TrainingData.f90  test_data.py
